Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-18382

QNetworkReply::errorString() returns untranslated strings

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 4.8.0
    • 4.7.2, 4.8.0
    • None
    • 434686a926a2a6e71f3cdea2508898b7800f7c81

      The QHttpNetworkConnectionPrivate::errorDetail is supposed to return a translated string, which is then set as the QNetworkReply error. The current code incorrectly uses QT_TRANSLATE_NOOP, which mark the strings for translation, but does not translate them. The result is that even with a translator loaded those strings are written in English.

      The attached patch fixes it. I did not do a MR because it's a trivial bug, but writing an test for it requires setting up the network autotest environment...

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            e0101981 Janne Anttila
            peppe Giuseppe D'Angelo
            Votes:
            1 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes